# cpp-template

./: .clang-format  .clang-tidy  .gitignore  .projections.json  CMakeLists.txt  README.md  conanfile.py  index.md
.github/workflows/: build.yml
benchmarks/micro/: CMakeLists.txt  hello-bench.cpp  main_microbenchmarks.cpp
cmake/: MyCppProjectConfig.cmake.in  UseClangFormat.cmake  UseClangTidy.cmake  mycppproject-macro.cmake
doc/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
include/: hello.hpp
src/: CMakeLists.txt  hello.cpp  hello.hpp
test_package/: conanfile.py  example.cpp
tests/: CMakeLists.txt  main_testu.cpp  tu_hello.cpp
tests/unit/: CMakeLists.txt  hello-test.cpp  main_testu.cpp
