message(STATUS "Building Tests")
list(APPEND CMAKE_MESSAGE_INDENT "  ")
add_subdirectory(unit)
if(ENABLE_MEMCHECK)
    message(STATUS "Looking for valgrind")
    list(APPEND CMAKE_MESSAGE_INDENT "  ")
    find_program(MEMORYCHECK_COMMAND valgrind)
	set(MEMORYCHECK_COMMAND_OPTIONS "--trace-children=yes --leak-check=full")
	set(MEMORYCHECK_SUPPRESSIONS_FILE "${CMAKE_CURRENT_SOURCE_DIR}/valgrind_suppress.txt")
	message(STATUS "MEMORYCHECK_COMMAND           = ${MEMORYCHECK_COMMAND}")
	message(STATUS "MEMORYCHECK_COMMAND_OPTIONS   = ${MEMORYCHECK_COMMAND_OPTIONS}")
	message(STATUS "MEMORYCHECK_SUPPRESSIONS_FILE = ${MEMORYCHECK_SUPPRESSIONS_FILE}")
	add_custom_target(memcheck ctest -R testu -D ExperimentalMemCheck COMMENT "Target run unit test witch memcheck" WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
    list(POP_BACK CMAKE_MESSAGE_INDENT)
endif(ENABLE_MEMCHECK)
list(POP_BACK CMAKE_MESSAGE_INDENT)

